# Hotel-Ichhya

./: .env  .env-live  .env-local  .gitignore  Dockerfile  FinalReport.md  Makefile  README.md  db.sqlite3  docker-compose.yml  initial_data.yaml  main.py  pyproject.toml  seed_conference.yaml  seed_data.yaml
about/: apps.py
about/views/: ajax.py  booking.py  public.py
accounts/: admin.py
accounts/admin/: __init__.py
accounts/migrations/: 0001_initial.py  0002_alter_user_avatar.py
accounts/models/: user.py
accounts/views/: admin.py  ajax.py  booking.py
admin_dashboard/: __init__.py  apps.py  forms.py  mixins.py  tests.py  urls.py
admin_dashboard/templatetags/: dashboard_tags.py
admin_dashboard/views/: __init__.py  (+13 more)
analytics/: apps.py
blogs/: admin.py  apps.py  urls.py
booking/: admin.py  apps.py  urls.py
conference/: admin.py  apps.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
contact/: admin.py  apps.py  urls.py
core/: context_processors.py  utils.py
dashboard/: forms.py  mixins.py  tests.py  urls.py
dining/: admin.py  apps.py  urls.py
gallery/: admin.py  apps.py  urls.py
homepage/: admin.py  apps.py  urls.py
nearby_places/: admin.py  apps.py
notifications/: apps.py
payments/: admin.py  urls.py
recreation/: admin.py  apps.py  urls.py
rooms/: admin.py  apps.py  urls.py
scratch/: cleanup_urls_admin.py  seed_conference.py
scripts/: backup.sh  generate_apps.py
seo/: admin.py  apps.py  context_processors.py
settings_manager/: admin.py  apps.py
templates/: base.html
testimonials/: admin.py  apps.py
(+366 files in other folders)
