[project]
name = "hotel-ichha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.7",
    "django-compressor>=4.6.0",
    "django-environ>=0.14.0",
    "django-imagekit>=6.1.0",
    "django-import-export>=4.4.1",
    "django-unfold>=0.100.0",
    "gunicorn>=26.0.0",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "redis>=8.0.1",
    "whitenoise>=6.12.0",
]
